--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -89,7 +89,7 @@
     },
 
     "memory": {
-        "format": "{}%  "
+        "format": "{used:0.1f}G/{total:0.1f}G  "
     },
 
     "temperature": {
