--- a/hypr/.config/hypr/keybinds.conf
+++ b/hypr/.config/hypr/keybinds.conf
@@ -70,6 +70,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# i3-like resize mode
+bind = $mainMod, R, submap, resize # 
+submap = resize
+binde = , L, resizeactive, 10 0
+binde = , H, resizeactive, -10 0
+binde = , K, resizeactive, 0 -10
+binde = , J, resizeactive, 0 10
+bind = , escape, submap, reset
+submap = reset
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -97,3 +107,6 @@ bind = SHIFT, Print, exec, $scriptDir/screenshot -r
 # Clipboard screenshots
 bind = CTRL, Print, exec, $scriptDir/screenshot -c
 bind = CTRL SHIFT, Print, exec, $scriptDir/screenshot -cr
+
+# toggle pretty stuff
+bind = WIN, F1, exec, $scriptDir/toggleDecorations
