--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,8 +23,7 @@ bind -r l select-pane -R
 # sessionizer stuff. Pretty much my most used script
 # Respect to ThePrimeagen
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
-bind-key -r H run-shell "tmux-sessionizer ~/Lections"
-bind-key -r G run-shell "tmux-sessionizer ~/projects/web-for-dc/"
+bind-key -r H run-shell "tmux-sessionizer ~/lections"
 
 # set -g @tokyo-night-tmux_window_id_style digital
 # set -g @tokyo-night-tmux_pane_id_style hsquare
@@ -39,9 +38,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'rose-pine/tmux'
 set -g @rose_pine_variant 'main'
 
-set -g @rose_pine_host 'on' # Enables hostname in the status bar
 set -g @rose_pine_date_time '%I:%M' # It accepts the date UNIX command format (man date for info)
 set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
 set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
